close #1584 changed translated field z-index value to fix this error
git-svn-id: https://svn.merengueproject.org/trunk@3940 5c12d508-d76f-0410-91c7-e3e856e0eb0f

--- a/merengueproj/merengue/media/css/admin.css
+++ b/merengueproj/merengue/media/css/admin.css
@@ -1018,7 +1018,7 @@ ul.extra_options {
     background-color: white;
     color: #666666;
     border-right: 1px solid white;
-    z-index: 100;
+    z-index: 10;
 }
 
 .trans-field-container .labels .active.errors label {
